[package]
name = "rust-assigment"
version = "0.1.0"
edition = "2021"

[dependencies]
rsa = { version = "0.9.6", features = ["sha2", "serde", "default"] }
clap = { version = "4.5.9", features = ["derive"] }
crossbeam-channel = "0.5.13"
anyhow = "1.0.86"
rand = "0.8.5"
base64 = "0.22.1"
jni = "0.21.1"
serde = { version = "1.0", features = ["derive", "serde_derive"] }
serde_json = "1.0"

[target.aarch64-apple-ios]
ar = "xcrun -sdk iphoneos ar"
linker = "xcrun -sdk iphoneos clang"

[target.x86_64-apple-ios]
ar = "xcrun -sdk iphonesimulator ar"
linker = "xcrun -sdk iphonesimulator clang"